Shared Objects for ENOV and ENFL

--- a/README
+++ b/README
@@ -3,5 +3,6 @@ Street, railroad and landmass data from the OpenStreetMap project (http://www.op
 Elevation data from http://viewfinderpanoramas.org/Coverage%20map%20viewfinderpanoramas_org3.htm
 Airport data from https://gateway.x-plane.com (partly modified)
 Objects from Terrasync (FlightGear Project) and my previous versions of scenery for this part of the world
+The use of current data concirning shared object models is highly recommended!
 
 Thanks to the data providers and have fun with this scenery!
