--- a/README
+++ b/README
@@ -2,7 +2,8 @@ CLC Landclass data from the CORINE project (https://land.copernicus.eu/pan-europ
 Street, railroad and landmass data from the OpenStreetMap project (http://www.openstreetmap.org)
 Elevation data from http://viewfinderpanoramas.org/Coverage%20map%20viewfinderpanoramas_org3.htm
 Airport data from https://gateway.x-plane.com (partly modified)
-Objects from Terrasync (FlightGear Project) and my previous versions of scenery for this part of the world
+Objects from Terrasync (FlightGear Project) and my previous versions of scenery for this part of the world,
+as well as further object placed by D-SVEN, thanks!
 The use of current data concirning shared object models is highly recommended!
 
 Thanks to the data providers and have fun with this scenery!
